@@ -1,3 +1,9 @@
+TAG: vocload-6-0-8-3
+DATE: 02/17/2017
+STAFF: sc
+CHANGES: TR12513
+1) emapload.sh - uncomment lastrun functionality
+
 TAG: vocload-6-0-8-2
 DATE: 02/17/2017
 STAFF: sc
